[package]
categories           = ["cryptography", "no-std"]
description          = "Cross-platform cryptographic random number generation"
edition.workspace    = true
keywords             = ["security", "random", "crypto", "getrandom"]
license.workspace    = true
name                 = "redoubt-rand"
repository.workspace = true
version.workspace    = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
getrandom.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }

[dev-dependencies]
proptest.workspace = true

[features]
test_utils = []
