[package]
name = "redoubt-rand"
authors = ["Federico Hoerth <memparanoid@gmail.com>"]
categories = ["cryptography", "no-std"]
description = "Cross-platform cryptographic random number generation"
edition.workspace = true
keywords = ["random", "crypto", "getrandom", "security", "rng"]
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
redoubt-hkdf.workspace = true
redoubt-zero.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
cpufeatures = "0.2.17"

[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "macos", target_os = "ios"))'.dependencies]
libc.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
getrandom.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }

[dev-dependencies]
proptest.workspace = true

[features]
test_utils = []
