[package]
authors              = ["Federico Hoerth <memparanoid@gmail.com>"]
categories           = ["memory-management"]
description          = "High-level Secret wrapper with auto-zeroization"
edition.workspace    = true
keywords             = ["security", "secret", "zeroize", "memory"]
license.workspace    = true
name = "redoubt-secret"
repository.workspace = true
version.workspace    = true

[lib]
path = "src/lib.rs"

[dependencies]
memcodec = { workspace = true, features = ["zeroize"] }
redoubt-util.workspace   = true
redoubt-zero.workspace    = true

[features]
default = []
