[package]
name = "redoubt-secret"
authors = ["Federico Hoerth <memparanoid@gmail.com>"]
categories = ["memory-management", "cryptography"]
description = "High-level Secret wrapper with automatic zeroization"
edition.workspace = true
keywords = ["secret", "zeroize", "security", "wrapper", "sensitive"]
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
redoubt-alloc.workspace  = true
redoubt-codec = { workspace = true, features = ["zeroize"] }
redoubt-util.workspace   = true
redoubt-zero.workspace    = true

[features]
default = []
