[package]
name = "redoubt-util"
authors = ["Federico Hoerth <memparanoid@gmail.com>"]
categories = ["memory-management", "development-tools"]
description = "Memory utilities for verification and testing"
edition.workspace = true
keywords = ["memory", "utilities", "verification", "testing", "helpers"]
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
