[package]
name = "redoubt-util"
authors = ["Federico Hoerth <memparanoid@gmail.com>"]
categories = ["memory-management", "development-tools"]
description = "Memory utilities for verification and testing"
edition.workspace = true
keywords = ["memory", "utilities", "verification", "testing", "helpers"]
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
test-utils = []

[dependencies]

[dev-dependencies]
redoubt-util = { path = ".", features = ["test-utils"] }
